# companion

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish_pypi.yml  publish_test_pypi.yml  semantic-release.yml
companion/: enums.py  handler.py  parser.py  request.py  response.py  server.py
tests/: test_parser.py  test_request_handler.py  test_response.py
